# BotTrade

./: .dockerignore  .flake8  .gitignore  Dockerfile  Dockerfile.dev  README.md  config.py  diff.txt  main.py  pyproject.toml  requirements.txt  scripts.py
bots/tg_bot/: bot.py
bots/tg_bot/handlers/: add_favorite_instruments.py  check_notify.py  info.py  instrument_info.py  remove_favorites.py  rout_add_favorite_instruments.py  route_remove_favorites.py  router.py
bots/tg_bot/keyboards/: kb_account.py
bots/tg_bot/messages/: messages_const.py
bots/tg_bot/middlewares/: deps.py
clients/tinkoff/: client.py  name_service.py  portfolio_svc.py  script_atr.py  test_script_atr.py
core/domains/: event_bus.py
core/schemas/: market_proc.py  portfolio.py  stream_proc.py  stream_processor.py
database/pgsql/: enums.py  models.py  repository.py  schemas.py
database/redis/: client.py  scripts_lua.py
database/token_storage/: storage.py
loki/: config.yml
migrations/: env.py
migrations/versions/: 1c88b37275df_add_column_type_intruments.py  29b7bf3683c6_delete_columns_in_position_and_.py  462cc8d04ff1_baseline_existing_db.py  716474b6528c_add_expiration_date_in_instruments_table.py  9c2cc03165e2_account_instruments_association_table.py
promtail/: config.yml
services/historic_service/: historic_service.py  indicators.py
services/scheduler/: scheduler.py
tests/test_market_data_handler/: conftest.py  factories.py  fakes.py  test_market_data_handler.py
utils/: __init__.py  arg_parse.py  logger.py  utils.py
