[project]
name = "tinkoff-bot"
version = "0.1.0"
description = "Проект для торговли и отслеживаия инструментов на бирже"
authors = [
    {name = "Оплеснин Иван",email = "aplesnin2010@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
